--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
-    "remixicon": "^4.2.0"
+    "remixicon": "^4.2.0",
+    "typed.js": "^2.1.0",
+    "wc-typed-js": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "20.12.10",
