--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react": "^18",
     "react-dom": "^18",
     "remixicon": "^4.2.0",
-    "typed.js": "^2.1.0",
-    "wc-typed-js": "^1.0.1"
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "20.12.10",
